// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs renders 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="MuiTabs-root Tabs-horizontal"
      data-component-type="tabs"
    >
      <div
        class="after:absolute after:content-[""] after:bottom-0 after:left-0 after:right-0 after:h-[1px] after:bg-gray after:z-0 flex-auto inline-block relative whitespace-nowrap"
      >
        <div
          class="base-TabsList base-TabsList flex"
          role="tablist"
          tabindex="-1"
        >
          <button
            aria-disabled="false"
            aria-selected="false"
            class="base-Tab opacity-70 m-0 [&:not(:last-child)]:mr-8 pt-[0.5625rem] pb-[0.4375rem] px-0 text-center bg-transparent transition-shadow z-10 rounded-none text-black shrink-0 max-w min-w sm:min-w md:min-w border-0 cursor-pointer inline-flex outline-none items-center select-none align-middle appearance-none justify-center no-underline [-webkit-tap-highlight normal-case whitespace-normal leading-4 relative"
            data-testid="tab-1"
            id=":r0:"
            role="tab"
            tabindex="0"
            type="button"
          >
            <span
              class="w-full inline-flex items-center flex-col justify-center"
            >
              <div
                class="m-0 text-sm text-inherit font-semibold leading-[1.1rem]"
              >
                Tab 1
              </div>
            </span>
          </button>
          <button
            aria-disabled="false"
            aria-selected="false"
            class="base-Tab opacity-70 m-0 [&:not(:last-child)]:mr-8 pt-[0.5625rem] pb-[0.4375rem] px-0 text-center bg-transparent transition-shadow z-10 rounded-none text-black shrink-0 max-w min-w sm:min-w md:min-w border-0 cursor-pointer inline-flex outline-none items-center select-none align-middle appearance-none justify-center no-underline [-webkit-tap-highlight normal-case whitespace-normal leading-4 relative"
            data-testid="tab-2"
            id=":r1:"
            role="tab"
            tabindex="0"
            type="button"
          >
            <span
              class="w-full inline-flex items-center flex-col justify-center"
            >
              <div
                class="m-0 text-sm text-inherit font-semibold leading-[1.1rem]"
              >
                Tab 2
              </div>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tabs renders in full width 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="MuiTabs-root Tabs-horizontal"
      data-component-type="tabs"
    >
      <div
        class="w-full overflow-hidden after:absolute after:content-[""] after:bottom-0 after:left-0 after:right-0 after:h-[1px] after:bg-gray after:z-0 flex-auto inline-block relative whitespace-nowrap"
      >
        <div
          class="base-TabsList base-TabsList flex"
          role="tablist"
          tabindex="-1"
        >
          <button
            aria-disabled="false"
            aria-selected="false"
            class="base-Tab opacity-70 m-0 [&:not(:last-child)]:mr-8 pt-[0.5625rem] pb-[0.4375rem] px-0 text-center bg-transparent transition-shadow z-10 rounded-none text-black shrink flex-grow basis-0 min-w sm:min-w md:min-w border-0 cursor-pointer inline-flex outline-none items-center select-none align-middle appearance-none justify-center no-underline [-webkit-tap-highlight normal-case whitespace-normal leading-4 relative"
            data-testid="tab-1"
            id=":re:"
            role="tab"
            tabindex="0"
            type="button"
          >
            <span
              class="w-full inline-flex items-center flex-col justify-center"
            >
              <div
                class="m-0 text-sm text-inherit font-semibold leading-[1.1rem]"
              >
                Tab 1
              </div>
            </span>
          </button>
          <button
            aria-disabled="false"
            aria-selected="false"
            class="base-Tab opacity-70 m-0 [&:not(:last-child)]:mr-8 pt-[0.5625rem] pb-[0.4375rem] px-0 text-center bg-transparent transition-shadow z-10 rounded-none text-black shrink flex-grow basis-0 min-w sm:min-w md:min-w border-0 cursor-pointer inline-flex outline-none items-center select-none align-middle appearance-none justify-center no-underline [-webkit-tap-highlight normal-case whitespace-normal leading-4 relative"
            data-testid="tab-2"
            id=":rf:"
            role="tab"
            tabindex="0"
            type="button"
          >
            <span
              class="w-full inline-flex items-center flex-col justify-center"
            >
              <div
                class="m-0 text-sm text-inherit font-semibold leading-[1.1rem]"
              >
                Tab 2
              </div>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tabs renders in vertical orientation 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="MuiTabs-root Tabs-vertical MuiTabs-vertical"
      data-component-type="tabs"
    >
      <div
        class="pl-2 flex-auto inline-block relative whitespace-nowrap"
      >
        <div
          aria-orientation="vertical"
          class="base-TabsList base-TabsList flex flex-col"
          role="tablist"
          tabindex="-1"
        >
          <button
            aria-disabled="false"
            aria-selected="false"
            class="base-Tab opacity-100 first:mt-4 last:mb-4 my-1 mx-0 py-2 px-4 text-left rounded-l rounded-r transition-all w-full overflow-hidden bg-gray hover:bg-gray text-graphite hover:text-black shrink-0 max-w min-w sm:min-w md:min-w border-0 cursor-pointer inline-flex outline-none items-center select-none align-middle appearance-none justify-center no-underline [-webkit-tap-highlight normal-case whitespace-normal leading-4 relative"
            data-testid="tab-1"
            id=":r2:"
            role="tab"
            tabindex="0"
            type="button"
          >
            <span
              class="w-full block"
            >
              <div
                class="m-0 text-md text-inherit font-semibold whitespace-nowrap overflow-ellipsis [-webkit-box overflow-hidden text-ellipsis pr-[0.9px] block"
              >
                Tab 1
              </div>
            </span>
          </button>
          <button
            aria-disabled="false"
            aria-selected="false"
            class="base-Tab opacity-100 first:mt-4 last:mb-4 my-1 mx-0 py-2 px-4 text-left rounded-l rounded-r transition-all w-full overflow-hidden bg-gray hover:bg-gray text-graphite hover:text-black shrink-0 max-w min-w sm:min-w md:min-w border-0 cursor-pointer inline-flex outline-none items-center select-none align-middle appearance-none justify-center no-underline [-webkit-tap-highlight normal-case whitespace-normal leading-4 relative"
            data-testid="tab-2"
            id=":r3:"
            role="tab"
            tabindex="0"
            type="button"
          >
            <span
              class="w-full block"
            >
              <div
                class="m-0 text-md text-inherit font-semibold whitespace-nowrap overflow-ellipsis [-webkit-box overflow-hidden text-ellipsis pr-[0.9px] block"
              >
                Tab 2
              </div>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tabs renders with a pre-selected option 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="MuiTabs-root Tabs-horizontal"
      data-component-type="tabs"
    >
      <div
        class="after:absolute after:content-[""] after:bottom-0 after:left-0 after:right-0 after:h-[1px] after:bg-gray after:z-0 flex-auto inline-block relative whitespace-nowrap"
      >
        <div
          class="base-TabsList base-TabsList flex"
          role="tablist"
          tabindex="-1"
        >
          <button
            aria-disabled="false"
            aria-selected="false"
            class="base-Tab opacity-70 m-0 [&:not(:last-child)]:mr-8 pt-[0.5625rem] pb-[0.4375rem] px-0 text-center bg-transparent transition-shadow z-10 rounded-none text-black shrink-0 max-w min-w sm:min-w md:min-w border-0 cursor-pointer inline-flex outline-none items-center select-none align-middle appearance-none justify-center no-underline [-webkit-tap-highlight normal-case whitespace-normal leading-4 relative"
            data-testid="tab-1"
            id=":r4:"
            role="tab"
            tabindex="0"
            type="button"
          >
            <span
              class="w-full inline-flex items-center flex-col justify-center"
            >
              <div
                class="m-0 text-sm text-inherit font-semibold leading-[1.1rem]"
              >
                Tab 1
              </div>
            </span>
          </button>
          <button
            aria-disabled="false"
            aria-selected="true"
            class="base-Tab base- opacity-100 m-0 [&:not(:last-child)]:mr-8 pt-[0.5625rem] pb-[0.4375rem] px-0 text-center bg-transparent transition-shadow z-10 rounded-none text-black shadow-blue shadow-[inset_0_-2px_0] shrink-0 max-w min-w sm:min-w md:min-w border-0 cursor-pointer inline-flex outline-none items-center select-none align-middle appearance-none justify-center no-underline [-webkit-tap-highlight normal-case whitespace-normal leading-4 relative"
            data-testid="tab-2"
            id=":r5:"
            role="tab"
            tabindex="0"
            type="button"
          >
            <span
              class="w-full inline-flex items-center flex-col justify-center"
            >
              <div
                class="m-0 text-sm text-inherit font-semibold leading-[1.1rem]"
              >
                Tab 2
              </div>
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      data-testid="tab-1-content"
    >
      Tab #
      1
       content
    </div>
  </div>
</div>
`;

exports[`Tabs renders with a pre-selected option using custom value 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="MuiTabs-root Tabs-horizontal"
      data-component-type="tabs"
    >
      <div
        class="after:absolute after:content-[""] after:bottom-0 after:left-0 after:right-0 after:h-[1px] after:bg-gray after:z-0 flex-auto inline-block relative whitespace-nowrap"
      >
        <div
          class="base-TabsList base-TabsList flex"
          role="tablist"
          tabindex="-1"
        >
          <button
            aria-disabled="false"
            aria-selected="true"
            class="base-Tab base- opacity-100 m-0 [&:not(:last-child)]:mr-8 pt-[0.5625rem] pb-[0.4375rem] px-0 text-center bg-transparent transition-shadow z-10 rounded-none text-black shadow-blue shadow-[inset_0_-2px_0] shrink-0 max-w min-w sm:min-w md:min-w border-0 cursor-pointer inline-flex outline-none items-center select-none align-middle appearance-none justify-center no-underline [-webkit-tap-highlight normal-case whitespace-normal leading-4 relative"
            data-testid="tab-1"
            id=":r6:"
            role="tab"
            tabindex="0"
            type="button"
          >
            <span
              class="w-full inline-flex items-center flex-col justify-center"
            >
              <div
                class="m-0 text-sm text-inherit font-semibold leading-[1.1rem]"
              >
                Tab 1
              </div>
            </span>
          </button>
          <button
            aria-disabled="false"
            aria-selected="false"
            class="base-Tab opacity-70 m-0 [&:not(:last-child)]:mr-8 pt-[0.5625rem] pb-[0.4375rem] px-0 text-center bg-transparent transition-shadow z-10 rounded-none text-black shrink-0 max-w min-w sm:min-w md:min-w border-0 cursor-pointer inline-flex outline-none items-center select-none align-middle appearance-none justify-center no-underline [-webkit-tap-highlight normal-case whitespace-normal leading-4 relative"
            data-testid="tab-2"
            id=":r7:"
            role="tab"
            tabindex="0"
            type="button"
          >
            <span
              class="w-full inline-flex items-center flex-col justify-center"
            >
              <div
                class="m-0 text-sm text-inherit font-semibold leading-[1.1rem]"
              >
                Tab 2
              </div>
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      data-testid="tab-1-content"
    >
      Tab #
      1
       content
    </div>
  </div>
</div>
`;
